Overview Page Alignment Issue

--- a/frontend/src/components/overview/table-style.scss
+++ b/frontend/src/components/overview/table-style.scss
@@ -47,15 +47,19 @@
       .status[target="RECEIVED"] {
         background: #28a745 0% 0% no-repeat padding-box;
         color: var(--white);
-        padding: 3px 10px;
-        border-radius: 7px;
+        padding: 3px 8px;
+        border-radius: 10px;
+        font-size: 0.65rem !important;
+        margin-left: 1rem !important;
       }
 
       .status[target="CREATED"] {
         background: var(--primary) 0% 0% no-repeat padding-box;
-        padding: 3px 12px;
-        border-radius: 7px;
+        padding: 3px 10px;
+        border-radius: 10px;
         color: var(--white);
+        font-size: 0.65rem !important;
+        margin-left: 1rem !important;
       }
 
       .round-sign {
